[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/JeuEtDev.gd" type="Script" id=1]
[ext_resource path="res://Illustration/SpaceAdventure.png" type="Texture" id=2]
[ext_resource path="res://font/Andada Pro 500.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 15
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/GridContainer"]
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="ScrollContainer/GridContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 93.0
rect_clip_content = true

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/PanelContainer"]
margin_left = 7.0
margin_top = 20.0
margin_right = 1017.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "Jeu Et Développement"
align = 1

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/GridContainer"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/GridContainer/GridContainer"]
margin_right = 510.0
margin_bottom = 444.0
rect_min_size = Vector2( 300, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 437.0

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -349.0
custom_fonts/normal_font = SubResource( 2 )
text = "ReserveTaPlace  2019
-SQL/HTLM/PHP
- Base de Données 
- Création d'un site de réservation de place de cinéma
"

[node name="RichTextLabel2" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 105.0
margin_right = 1.0
margin_bottom = -244.0
custom_fonts/normal_font = SubResource( 2 )
text = "Projet Space Adventure 2017
- Python/Tkinter
- Jeu 
- Jeu de shooter en python"

[node name="RichTextLabel3" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 217.0
margin_right = 1.0
margin_bottom = -132.0
custom_fonts/normal_font = SubResource( 2 )
text = "Projet Sea Of Devs 2019
- C
- Architecture - Threads
- Jeu de bataille navale"

[node name="ButtonSQL" type="Button" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel"]
margin_left = 9.0
margin_top = 81.0
margin_right = 21.0
margin_bottom = 101.0
text = "Lien"

[node name="ButtonTkinter" type="Button" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel"]
margin_left = 9.0
margin_top = 193.0
margin_right = 21.0
margin_bottom = 213.0
text = "Lien"

[node name="ButtonSOD" type="Button" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel"]
margin_left = 9.0
margin_top = 305.0
margin_right = 21.0
margin_bottom = 325.0
text = "Lien"

[node name="PanelContainer2" type="PanelContainer" parent="ScrollContainer/GridContainer/GridContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 444.0
rect_min_size = Vector2( 200, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/GridContainer/GridContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 503.0
margin_bottom = 437.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PanelContainer2" type="PanelContainer" parent="ScrollContainer/GridContainer"]
margin_top = 552.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 300, 48 )
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="ScrollContainer/GridContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 41.0

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 48.0
text = "retour au menu"

[connection signal="pressed" from="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel/ButtonSQL" to="." method="_on_ButtonSQL_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel/ButtonTkinter" to="." method="_on_ButtonTkinter_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/GridContainer/PanelContainer/Panel/ButtonSOD" to="." method="_on_ButtonSOD_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
